@@ -3,9 +3,11 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
+themedir=@THEME_DIR@
+
 Name: libldmgreeter
 Description: LightDM greeter library
 Version: @VERSION@
 Requires: glib-2.0 dbus-glib-1
 Libs: -L${libdir} -lldmgreeter
-Cflags: -I${includedir}/lightdm-1.0
+Cflags: -I${includedir}/lightdm-0
